# CC

./: .gitignore  .gitmodules  README.md  aspmc  bench.py  gen.py  plot.py  setup.sh
aspmc/: __init__.py  config.py
aspmc-dev/: LICENSE  README.md  TODO.md  main.py  profile.sh  requirements.txt  setup.sh
aspmc-dev/aspmc/: config.py  stats.py  util.py
aspmc-dev/grammars/: grammar.py  map_grammar.py  meu_grammar.py
aspmc-dev/lib/minisat-definitions/: .gitmodules  CMakeLists.txt  setup.sh
aspmc-dev/lib/minisat-definitions/minisat/: Makefile
aspmc-dev/lib/minisat-definitions/src/: Main.cpp  Parser.cpp  Parser.h  Util.h
aspmc-dev/test/: test_constraints.lp  test_double_declare.lp  test_maxplus_both.lp  test_maxplus_either.lp  test_meu_simple.lp  test_removed_query.lp  test_sm_small.lp  test_sm_smokers.lp  test_smokers_10.lp  test_smokers_20.lp  test_tree_sm.lp
aspmc-dev/unittests/: test_aproblog.py  test_asp.py  test_cnf_special.py  test_meuproblog.py  test_problog.py  test_smproblog.py
aspmc/compile/: __init__.py  circuit.py  cnf.py  constrained_compile.py  constrained_ddnnf.py  constrained_sdd.py  separator.py
aspmc/graph/: bintree.py  treedecomposition.py
aspmc/parsing/: map_semantics.py
aspmc/programs/: backdoor.py  guess_tree.lp  mapprogram.py  meuprogram.py  twoalgebraicprogram.py
benchmarks/map/: clean.sh  rm_true.sh
benchmarks/meu/: asia_1_1337671202.pl  asia_1_1400227407.pl  asia_1_1588920084.pl  asia_1_1707665179.pl  asia_1_2023896565.pl  asia_1_769949150.pl  asia_2_1592975436.pl  asia_2_1807131032.pl  asia_2_2023896565.pl  (+48 more)
(+5956 files in other folders)
